--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <div class="promo">
+    <section class="promo">
         <div class="container">
 
             <header class="header">
@@ -53,11 +53,11 @@
                 </div>
             </div>            
         </div>
-    </div>
-    <div class="advantages">
+    </section>
+    <section class="advantages">
         <div class="container">
 
-            <h2 class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</h2>
+            <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
 
             <div class="advantages__wrapper">
                 <div class="advantages__icon">
@@ -84,6 +84,23 @@
                 </div>                
             </div>
         </div>
-    </div>
+    </section>
+    <section class="consultation">
+        <div class="container">
+            <h2 class="title title_left">
+                Получите бесплатную консультацию<br> по подбору пульсометра 
+            </h2>
+            <div class="consultation__descr">
+                Просто заполните форму заявки<br> и мы перезвоним вам в течении 10 минут
+            </div>
+            <form class='feed-form' action="#">
+                <input name='name' required placeholder="Ваше имя" type="text">
+                <input name='phone' required placeholder="Ваш телефон" type="number">
+                <input name='email' required placeholder="Ваш E-mail" type="email">
+                
+                <button class="button button_submit">заказать КОНСУЛЬТАЦИЮ</button>
+            </form>
+        </div>
+    </section>
 </body>
 </html>
