add carousel (no adaptation)

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -54,6 +55,7 @@
             </div>            
         </div>
     </section>
+
     <section class="advantages">
         <div class="container">
 
@@ -79,12 +81,13 @@
                     <div class="advantages__title">Учим бегать</div>
                     <div class="advantages__text">
                         Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - 
-                        <span>I LOVE RUNNING</span>.
+                        <span><a href="#">I LOVE RUNNING</a></span>.
                     </div>
                 </div>                
             </div>
         </div>
     </section>
+
     <section class="consultation">
         <div class="container">
             <h2 class="title title_left">
@@ -102,5 +105,27 @@
             </form>
         </div>
     </section>
+
+    <section class="carousel">
+        <div class="container">
+            <div class="carousel__inner">
+                <div class="carousel__item">
+                    <img src="img/carousel_item_1.jpg" alt="1">
+                </div>
+                <div class="carousel__item">
+                    <img src="img/carousel_item_2.jpg" alt="2">
+                </div>
+                <div class="carousel__item">
+                    <img src="img/carousel_item_3.jpg" alt="3">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
