--- a/src/index.html
+++ b/src/index.html
@@ -108,14 +108,14 @@
 
     <section class="carousel">
         <div class="container">
-            <div class="carousel__inner">
+            <div class="carousel__slider">
                 <div class="carousel__item">
                     <img src="img/carousel_item_1.jpg" alt="1">
                 </div>
-                <div class="carousel__item">
+                <div class="carousel__slider">
                     <img src="img/carousel_item_2.jpg" alt="2">
                 </div>
-                <div class="carousel__item">
+                <div class="carousel__slider">
                     <img src="img/carousel_item_3.jpg" alt="3">
                 </div>
             </div>
