--- a/src/index.html
+++ b/src/index.html
@@ -403,6 +403,35 @@
         </div>
     </section>
 
+    <section class="review">
+        <div class="container">
+            <h2 class="title">отзывы клиентов</h2>
+            <div class="review__block">
+                <img src="img/review/review_1.png" alt="1" class="review__img">
+                <div class="review__text">
+                    <div class="review__subtitle">Ирина Иванченко</div>
+                    <div class="review__number">2 полумарафона</div>
+                    <div class="review__descr">Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.<br>Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.<br><br>Новые цели - новый гаджет!<br><br>Спасибо, RunSmart!</div>
+                </div>
+            </div>
+            <div class="review__block">
+                <img src="img/review/review_2.png" alt="2" class="review__img">
+                <div class="review__text">
+                    <div class="review__subtitle">Иван Сёмочкин</div>
+                    <div class="review__number">1 полумарафон</div>
+                    <div class="review__descr">Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. <br>Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд.<br><br>С ними подготовился к своему первому полумарафону! Спасибо!!!</div>
+                </div>
+            </div>
+            <div class="review__block">
+                <img src="img/review/review_3.png" alt="3" class="review__img">
+                <div class="review__text">
+                    <div class="review__subtitle">Юлия Дашкина</div>
+                    <div class="review__number">2 полумарафона</div>
+                    <div class="review__descr">Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.<br><br>Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!<br><br>Спасибо!!!</div>
+                </div>
+            </div>
+        </div>
+    </section>
     
     <!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script> -->
     <!-- <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
