--- a/src/index.html
+++ b/src/index.html
@@ -432,6 +432,20 @@
             </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.9928586447422!2d30.514023115615544!3d50.44123367947414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef927eb6e91%3A0x7940b461c2dadc50!2z0YPQuy4g0J_Rg9GI0LrQuNC90YHQutCw0Y8sIDM0LCDQmtC40LXQsiwgMDIwMDA!5e0!3m2!1sru!2sua!4v1618985988826!5m2!1sru!2sua" width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <!-- <div class="footer__map"></div> -->
+        <div class="footer__info">
+            <address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
+            <a class="footer__phone" href="tel:84999228974">8 (499) 922-89-74</a>
+            <div class="footer__social">
+                <a href="" class="footer__social-item"><img src="icons/social/fb_icon.png" alt="fb"></a>
+                <a href="" class="footer__social-item"><img src="icons/social/inst_icon.png" alt="inst"></a>
+                <a href="" class="footer__social-item"><img src="icons/social/pint_icon.png" alt="pint"></a>
+            </div>
+        </div>
+    </footer>
     
     <!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script> -->
     <!-- <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
