--- a/src/index.html
+++ b/src/index.html
@@ -64,14 +64,14 @@
 
             <div class="advantages__wrapper">
                 <div class="advantages__icon">
-                    <img src="icons/second_screen/ss_cup_1.png" alt="2">
+                    <img src="icons/second_screen/ss_cup_1.png" alt="1">
                     <div class="advantages__title">Делимся опытом</div>
                     <div class="advantages__text">
                         Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
                     </div>
                 </div>                    
                 <div class="advantages__icon">
-                    <img src="icons/second_screen/ss_heart_2.png" alt="2">
+                    <img src="icons/second_screen/ss_heart_2.png" alt="2" class="advantages__animated">
                     <div class="advantages__title">Заботимся о здоровье</div>
                     <div class="advantages__text">
                         Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
