--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/animate.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css"> -->
     <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -406,7 +407,7 @@
     <section class="review">
         <div class="container">
             <h2 class="title">отзывы клиентов</h2>
-            <div class="review__block">
+            <div class="review__block animate__fadeInUp wow animate__animated" data-wow-duration="2s" data-wow-delay="1s">
                 <img src="img/review/review_1.png" alt="1" class="review__img">
                 <div class="review__text">
                     <div class="review__subtitle">Ирина Иванченко</div>
@@ -414,7 +415,7 @@
                     <div class="review__descr">Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.<br>Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.<br><br>Новые цели - новый гаджет!<br><br>Спасибо, RunSmart!</div>
                 </div>
             </div>
-            <div class="review__block">
+            <div class="review__block animate__fadeInUp wow animate__animated" data-wow-duration="2s" data-wow-delay="1s">
                 <img src="img/review/review_2.png" alt="2" class="review__img">
                 <div class="review__text">
                     <div class="review__subtitle">Иван Сёмочкин</div>
@@ -422,7 +423,7 @@
                     <div class="review__descr">Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. <br>Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд.<br><br>С ними подготовился к своему первому полумарафону! Спасибо!!!</div>
                 </div>
             </div>
-            <div class="review__block">
+            <div class="review__block animate__fadeInUp wow animate__animated" data-wow-duration="2s" data-wow-delay="1s">
                 <img src="img/review/review_3.png" alt="3" class="review__img">
                 <div class="review__text">
                     <div class="review__subtitle">Юлия Дашкина</div>
@@ -493,6 +494,7 @@
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
