web-site validation done

--- a/src/index.html
+++ b/src/index.html
@@ -108,7 +108,7 @@
         </div>
     </section>
 
-    <section class="carousel">
+    <div class="carousel">
         <div class="container">
             <div class="carousel__slider">
                 <div class="carousel__item">
@@ -124,7 +124,7 @@
             <!-- <button type="button" class="prev"><img src="../icons/left_red_arrow.png"></button> -->
             <!-- <button type="button" class="next"><img src="../icons/right_red_arrow.png"></button> -->
         </div>
-    </section>
+    </div>
 
     <section class="catalog">
         <div class="container">
@@ -143,13 +143,13 @@
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                         </div>
-                        <ul class="catalog-item__list ">
-                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalog-item__list ">
+                            <div>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</div>
+                            <div>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</div>
+                            <div>Также Вы увидите информацию о расходе калорий за тренировку;</div>
+                            <div>Вы сможете посмотреть данные по 10 тренировкам.</div>
                             <a href="#" class="catalog-item__back">назад</a>
-                        </ul>
+                        </div>
                     </div>
 
                     <hr>
@@ -172,13 +172,13 @@
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                         </div>
-                        <ul class="catalog-item__list">
-                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalog-item__list">
+                            <div>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</div>
+                            <div>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</div>
+                            <div>Также Вы увидите информацию о расходе калорий за тренировку;</div>
+                            <div>Вы сможете посмотреть данные по 10 тренировкам.</div>
                             <a href="#" class="catalog-item__back">назад</a>
-                        </ul>
+                        </div>
                     </div>
 
                     <hr>
@@ -201,13 +201,13 @@
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                         </div>
-                        <ul class="catalog-item__list">
-                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalog-item__list">
+                            <div>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</div>
+                            <div>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</div>
+                            <div>Также Вы увидите информацию о расходе калорий за тренировку;</div>
+                            <div>Вы сможете посмотреть данные по 10 тренировкам.</div>
                             <a href="#" class="catalog-item__back">назад</a>
-                        </ul>
+                        </div>
                     </div>
 
                     <hr>
@@ -230,13 +230,13 @@
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                         </div>
-                        <ul class="catalog-item__list">
-                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalog-item__list">
+                            <div>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</div>
+                            <div>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</div>
+                            <div>Также Вы увидите информацию о расходе калорий за тренировку;</div>
+                            <div>Вы сможете посмотреть данные по 10 тренировкам.</div>
                             <a href="#" class="catalog-item__back">назад</a>
-                        </ul>
+                        </div>
                     </div>
 
                     <hr>
@@ -259,13 +259,13 @@
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                         </div>
-                        <ul class="catalog-item__list">
-                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalog-item__list">
+                            <div>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</div>
+                            <div>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</div>
+                            <div>Также Вы увидите информацию о расходе калорий за тренировку;</div>
+                            <div>Вы сможете посмотреть данные по 10 тренировкам.</div>
                             <a href="#" class="catalog-item__back">назад</a>
-                        </ul>
+                        </div>
                     </div>
 
                     <hr>
@@ -288,44 +288,13 @@
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                         </div>
-                        <ul class="catalog-item__list">
-                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalog-item__list">
+                            <div>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</div>
+                            <div>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</div>
+                            <div>Также Вы увидите информацию о расходе калорий за тренировку;</div>
+                            <div>Вы сможете посмотреть данные по 10 тренировкам.</div>
                             <a href="#" class="catalog-item__back">назад</a>
-                        </ul>
-                    </div>
-
-                    <hr>
-
-                    <div class="catalog-item__footer">
-                        <div class="catalog-item__prices">
-                            <div class="catalog-item__old-price">4 750 руб.</div>
-                            <div class="catalog-item__new-price">4 500 руб.</div>
                         </div>
-                        <button class="button button_mini">
-                            КУПИТЬ
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="catalog__content">
-                <div class="catalog-item">
-                    <div class="catalog-item__wrapper">
-                        <div class="catalog-item__content catalog-item__content_active">
-                            <img src="img/watch.png" alt="pulsometr" class="catalog-item__img">
-                            <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
-                            <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
-                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
-                        </div>
-                        <ul class="catalog-item__list">
-                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
-                            <a href="#" class="catalog-item__back">назад</a>
-                        </ul>
                     </div>
 
                     <hr>
@@ -350,13 +319,44 @@
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                         </div>
-                        <ul class="catalog-item__list">
-                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalog-item__list">
+                            <div>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</div>
+                            <div>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</div>
+                            <div>Также Вы увидите информацию о расходе калорий за тренировку;</div>
+                            <div>Вы сможете посмотреть данные по 10 тренировкам.</div>
                             <a href="#" class="catalog-item__back">назад</a>
-                        </ul>
+                        </div>
+                    </div>
+
+                    <hr>
+
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <div class="catalog-item__old-price">4 750 руб.</div>
+                            <div class="catalog-item__new-price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_mini">
+                            КУПИТЬ
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="catalog__content">
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content catalog-item__content_active">
+                            <img src="img/watch.png" alt="pulsometr" class="catalog-item__img">
+                            <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                            <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <div class="catalog-item__list">
+                            <div>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</div>
+                            <div>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</div>
+                            <div>Также Вы увидите информацию о расходе калорий за тренировку;</div>
+                            <div>Вы сможете посмотреть данные по 10 тренировкам.</div>
+                            <a href="#" class="catalog-item__back">назад</a>
+                        </div>
                     </div>
 
                     <hr>
@@ -379,13 +379,13 @@
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                         </div>
-                        <ul class="catalog-item__list">
-                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalog-item__list">
+                            <div>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</div>
+                            <div>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</div>
+                            <div>Также Вы увидите информацию о расходе калорий за тренировку;</div>
+                            <div>Вы сможете посмотреть данные по 10 тренировкам.</div>
                             <a href="#" class="catalog-item__back">назад</a>
-                        </ul>
+                        </div>
                     </div>
 
                     <hr>
@@ -435,7 +435,7 @@
     </section>
 
     <footer class="footer">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.9928586447422!2d30.514023115615544!3d50.44123367947414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef927eb6e91%3A0x7940b461c2dadc50!2z0YPQuy4g0J_Rg9GI0LrQuNC90YHQutCw0Y8sIDM0LCDQmtC40LXQsiwgMDIwMDA!5e0!3m2!1sru!2sua!4v1618985988826!5m2!1sru!2sua" width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.9928586447422!2d30.514023115615544!3d50.44123367947414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef927eb6e91%3A0x7940b461c2dadc50!2z0YPQuy4g0J_Rg9GI0LrQuNC90YHQutCw0Y8sIDM0LCDQmtC40LXQsiwgMDIwMDA!5e0!3m2!1sru!2sua!4v1618985988826!5m2!1sru!2sua" allowfullscreen="" loading="lazy"></iframe>
         <!-- <div class="footer__map"></div> -->
         <div class="footer__info">
             <address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
